adding api testing per spec
