# src/app/api/types.go
@@ -3,10 +3,6 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package api
 
-const (
-	BearerAuthScopes = "bearerAuth.Scopes"
-)
-
 // User defines model for User.
 type User struct {
 	Email     string `json:"email" validate:"required,email"`
